bk_ida/gccida/g1/function_units_used
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:11979:1: error: must use 'enum' tag to refer to type 'attr_athlon_fpunits'
attr_athlon_fpunits attr_athlon_fpunits; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:11980:1: error: must use 'enum' tag to refer to type 'attr_athlon_decode'
attr_athlon_decode attr_athlon_decode; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:11981:1: error: must use 'enum' tag to refer to type 'attr_pent_pair'
attr_pent_pair attr_pent_pair; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:11982:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type attr_type; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:11984:1: error: must use 'enum' tag to refer to type 'processor_type'
processor_type v6; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:11986:1: error: must use 'enum' tag to refer to type 'processor_type'
processor_type v8; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:11990:1: error: must use 'enum' tag to refer to type 'processor_type'
processor_type v12; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:12010:1: error: must use 'enum' tag to refer to type 'attr_memory'
attr_memory attr_memory; // [rsp+8h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:12011:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode attr_mode; // [rsp+Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:12043:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v17 = immediate_operand( recog_data_0.operand[1], VOIDmode); 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:12075:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( immediate_operand( recog_data_0.operand[1], VOIDmode) || ( unsigned int)attr_memory <= MEMORY_STORE ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/insn-attrtab.c:12186:29: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( v27 = general_operand( recog_data_0.operand[0], QImode), v28 = 1024, !v27) ) 
                            ^~~~~~~~~~~~
                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/function_units_used/src/obj/insn-attrtab.o] Error 1
